4th sprint of developemnt complete  and testing is now left

--- a/home-marketplace.html
+++ b/home-marketplace.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <title>Cartzilla | Multi-vendor Marketplace</title>
     <!-- SEO Meta Tags-->
-    <meta name="description" content="Cartzilla - Bootstrap E-commerce Template">
+    <meta name="description" content="Cartzilla - Profile Code KE |Leading File MarketPlace |PROFILECODE">
     <meta name="keywords" content="bootstrap, shop, e-commerce, market, modern, responsive,  business, mobile, bootstrap, html5, css3, js, gallery, slider, touch, creative, clean">
     <meta name="author" content="Createx Studio">
     <!-- Viewport-->
